--- a/cyrobuf/protobuf/templates/proto_h.tmpl
+++ b/cyrobuf/protobuf/templates/proto_h.tmpl
@@ -14,6 +14,14 @@
 {%- endfor %}
 
 {%- macro structdef(name, message) %}
+	{%- for enum_name, enum in message.enums.items() %}
+{{ enumdef(name + enum_name, enum) }}
+	{%- endfor %}
+
+	{%- for message_name, message_message in message.messages.items() %}
+{{ structdef(name + message_name, message_message) }}
+	{%- endfor %}
+
 struct {{ name }} {
 {% for field in message.fields|sort(attribute='index') -%}
 	{%- if field.modifier == 'repeated' %}
@@ -23,9 +31,9 @@ struct {{ name }} {
 	{%- elif field.type == 'bytes' %}
 	uint8_t *{{ field.name }};
 	{%- elif field.type == 'message' %}
-	struct {% if field.is_nested %}{{ name }}_{% endif %}{{ field.message_name }} {{ field.name }};
+	struct {% if field.is_nested %}{{ name }}{% endif %}{{ field.message_name }} {{ field.name }};
 	{%- elif field.type == 'enum' %}
-	enum {% if field.is_nested %}{{ name }}_{% endif %}{{ field.enum_name }} {{ field.name }};
+	enum {% if field.is_nested %}{{ name }}{% endif %}{{ field.enum_name }} {{ field.name }};
 	{%- else %}
 	{{ field.c_type }} {{ field.name }};
 	{%- endif %}
@@ -39,14 +47,6 @@ int {{ name }}_parse_from_string(struct {{ name }} *message,
 	const uint8_t *buffer, size_t buffer_size);
 int {{ name }}_serialize_to_string(struct {{ name }} *message,
 	uint8_t *buffer, size_t buffer_size, size_t *used);
-
-	{%- for message_name, message_message in message.messages.items() %}
-{{ structdef(name + '_' + message_name, message_message) }}
-	{%- endfor %}
-
-	{%- for enum_name, enum in message.enums.items() %}
-{{ enumdef(name + '_' + enum_name, enum) }}
-	{%- endfor %}
 {%- endmacro %}
 
 {%- macro enumdef(name, enum) %}
