--- a/cyrobuf/protobuf/templates/proto_c.tmpl
+++ b/cyrobuf/protobuf/templates/proto_c.tmpl
@@ -33,15 +33,15 @@ void
     {%- for field in message.fields %}
         {%- if field.modifier == 'repeated' %}
             {%- if field.type == 'message' %}
-    {% if field.is_nested %}{{ name }}{% endif %}{{ field.message_name }}_list_destroy(message.{{ field.name }});
+    {% if field.is_nested %}{{ name }}{% endif %}{{ field.message_name }}_list_destroy(&message->{{ field.name }});
             {%- else %}
-    {{ field.list_type }}_destroy(&message.{{ field.name }});
+    {{ field.list_type }}_destroy(&message->{{ field.name }});
             {%- endif %}
         {%- elif field.type == 'message' %}
-    {% if field.is_nested %}{{ name }}{% endif %}{{ field.message_name }}_destroy(&message.{{ field.name }});
+    {% if field.is_nested %}{{ name }}{% endif %}{{ field.message_name }}_destroy(message->{{ field.name }});
         {%- elif field.type in ('string', 'bytes') %}
-    if (message.{{ field.name }} != NULL) {
-        free(message.{{ field.name }});
+    if (message->{{ field.name }} != NULL) {
+        free(message->{{ field.name }});
     }
         {%- endif %}
     {%- endfor %}
@@ -65,12 +65,12 @@ struct {{ name }} *
     {%- for field in message.fields %}
         {%- if field.modifier == 'repeated' %}
             {%- if field.type == 'message' %}
-    {% if field.is_nested %}{{ name }}{% endif %}{{ field.message_name }}_list_copy(&out.{{ field.name }}, &message.{{ field.name }});
+    {% if field.is_nested %}{{ name }}{% endif %}{{ field.message_name }}_list_copy(&out->{{ field.name }}, &message->{{ field.name }});
             {%- else %}
-    {{ field.list_type }}_list_copy(&out.{{ field.name }}, &message.{{ field.name }})
+    {{ field.list_type }}_list_copy(&out->{{ field.name }}, &message->{{ field.name }})
             {%- endif %}
         {%- elif field.type == 'message' %}
-    out.{{ field.name }} = {% if field.is_nested %}{{ name }}{% endif %}{{ field.message_name }}_copy(message.{{ field.name }});
+    out->{{ field.name }} = {% if field.is_nested %}{{ name }}{% endif %}{{ field.message_name }}_copy(message.{{ field.name }});
         {%- endif %}
     {%- endfor %}
 
@@ -165,6 +165,21 @@ struct {{ name }} *
 int
 {{ name }}_list_remove(struct {{ name }}_list *list, struct {{ name }} *message)
 {
+    for (size_t i = 0; i < list->len; i++) {
+        if (list->values[i] == message) {
+            break;
+        }
+    }
+
+    if (i == list->len) {
+        return 1;
+    }
+
+    for (size_t j = i; j < list->len - 1; j++) {
+        list->values[j] = list->values[j + 1];
+    }
+
+    return 0;
 }
 
 	{%- for message_name, message_message in message.messages.items() %}
