--- a/cyrobuf/protobuf/templates/proto_h.tmpl
+++ b/cyrobuf/protobuf/templates/proto_h.tmpl
@@ -58,6 +58,7 @@ int {{ name }}_parse_from_string(struct {{ name }} *message,
 	const uint8_t *buffer, size_t buffer_size);
 int {{ name }}_serialize_to_string(struct {{ name }} *message,
 	uint8_t *buffer, size_t buffer_size, size_t *used);
+void {{ name }}_print(struct {{ name }} *message, size_t indent);
 
 void {{ name }}_list_destroy(struct {{ name }}_list *list);
 void {{ name }}_list_copy(struct {{ name }}_list *dest, struct {{ name }}_list *src);
