--- a/cyrobuf/protobuf/templates/proto_c.tmpl
+++ b/cyrobuf/protobuf/templates/proto_c.tmpl
@@ -147,23 +147,27 @@ int
             {{ field.name }}_elt = {% if field.is_nested %}{{ name }}{% endif %}{{ field.message_name }}_init();
             field_size = (size_t)get_varint64(buffer, offset);
             {% if field.is_nested %}{{ name }}{% endif %}{{ field.message_name }}_parse_from_string({{ field.name }}_elt, buffer, field_size, offset);
-            {% if field.is_nested %}{{ name }}{% endif %}{{ field.message_name }}_list_append(&message->{{ field.name }}, {{ field.name }}_elt);
+            {% if field.is_nested %}{{ name }}{% endif %}{{ field.message_name }}_list_append_unsafe(&message->{{ field.name }}, {{ field.name }}_elt);
+
                 {%- elif field.type == 'string' %}
             field_size = (size_t)get_varint64(buffer, offset);
             {{ field.name }}_elt = strndup((char *)(buffer + *offset), field_size);
-            cyrobuf_string_list_append(&message->{{ field.name }}, {{ field.name }}_elt);
+            cyrobuf_string_list_append_unsafe(&message->{{ field.name }}, {{ field.name }}_elt);
             *offset += field_size;
+
                 {%- elif field.type == 'bytes' %}
             field_size = (size_t)get_varint64(buffer, offset);
             {{ field.name }}_elt = calloc(1, sizeof(struct cyrobuf_bytes) + field_size);
             {{ field.name }}_elt->len = field_size;
             memcpy({{ field.name }}_elt->data, (buffer + *offset), field_size);
-            cyrobuf_bytes_list_append(&message->{{ field.name }}, {{ field.name }}_elt);
+            cyrobuf_bytes_list_append_unsafe(&message->{{ field.name }}, {{ field.name }}_elt);
             *offset += field_size;
+
                 {%- elif field.fixed_width == true %}
             {{ field.name }}_elt = *({{ field.c_type }} *)(buffer + *offset);
             {{ field.list_type }}_append(&message->{{ field.name }}, {{ field.name }}_elt);
             *offset += sizeof({{ field.c_type }});
+
                 {%- elif field.var_width == true %}
             {{ field.name }}_elt = {{ field.getter }}(buffer, offset);
             {{ field.list_type }}_append(&message->{{ field.name }}, {{ field.name }}_elt);
@@ -304,6 +308,17 @@ void
 }
 
 void
+{{ name }}_list_append_unsafe(struct {{ name }}_list *list, struct {{ name }} *message)
+{
+    if (list->_size <= list->len) {
+        list->_size = list->_size > 0 ? list->_size << 1 : 4;
+        list->values = realloc(list->values, list->_size * sizeof(struct {{ name }} *));
+    }
+
+    list->values[list->len++] = message;
+}
+
+void
 {{ name }}_list_extend(struct {{ name }}_list *list, struct {{ name }}_list *other)
 {
     if (list->_size < list->len + other->len) {
@@ -325,10 +340,10 @@ void
     }
 
     for (size_t j = list->len; j > i; j--) {
-        list->values[j] = list->values[j - 1];
+        list->values[j] = {{ name }}_copy(list->values[j - 1]);
     }
 
-    list->values[i] = {{ name }}_copy(message);
+    list->values[i] = message;
     list->len++;
 }
 
