--- a/cyrobuf/protobuf/templates/proto_h.tmpl
+++ b/cyrobuf/protobuf/templates/proto_h.tmpl
@@ -57,7 +57,7 @@ struct {{ name }} *{{ name }}_copy(struct {{ name }} *message);
 int {{ name }}_parse_from_string(struct {{ name }} *message,
 	const uint8_t *buffer, size_t max_offset, size_t *offset);
 int {{ name }}_serialize_to_string(struct {{ name }} *message,
-	uint8_t *buffer, size_t buffer_size, size_t *used);
+	uint8_t *buffer, size_t max_offset, size_t *used);
 void {{ name }}_print(struct {{ name }} *message, size_t indent);
 
 void {{ name }}_list_destroy(struct {{ name }}_list *list);
